Change cognito service and create a functions postgres
